--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- All your header related works -->
 			<header>
-				<div class="logo" style="height: 10px; width: 10px;"><a href="index.html"><img src="assets/img/logo.png"></a>
+				<div class="logo"><a href="index.html"><img src="assets/img/img.png"></a>
 				</div>
 				<div class="navigation">
 					<ul id="menulist">
